<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activities.EnterAppPassword">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:background="@color/accentRed"
            android:fitsSystemWindows="true"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/company"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:alpha="0.6"
                    android:ellipsize="middle"
                    android:fontFamily="@font/quicksand_bold"
                    android:gravity="center_horizontal"
                    android:letterSpacing="0.1"
                    android:singleLine="true"
                    android:text="@string/notes_code"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/splash_lottie"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>

            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/bottomContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Status1 -->
        <LinearLayout
            android:id="@+id/statusBackground1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accentRed"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/statusType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:ellipsize="middle"
                android:fontFamily="@font/quicksand_bold"
                android:gravity="center_horizontal"
                android:letterSpacing="0.1"
                android:singleLine="true"
                android:text="@string/enter_app_password_title"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/statusContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:ellipsize="middle"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center_horizontal"
                android:text="@string/enter_app_password_description"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/statusShadow"
            android:layout_marginTop="-15dp">

            <!-- Status2 -->
            <LinearLayout
                android:id="@+id/statusBackground2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/accentRed"
                android:orientation="vertical" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:scrollbars="none">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="65dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintWidth_max="400dp"
                        card_view:cardBackgroundColor="@android:color/transparent"
                        card_view:cardCornerRadius="25dp"
                        card_view:cardElevation="3dp"
                        card_view:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.github.mmin18.widget.RealtimeBlurView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@id/relativelayout"
                                android:layout_alignBottom="@id/relativelayout"
                                app:realtimeBlurRadius="100dp"
                                app:realtimeDownsampleFactor="4"
                                app:realtimeOverlayColor="#99FFFFFF" />

                            <!-- Content -->
                            <RelativeLayout
                                android:id="@+id/relativelayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/view_card"
                                android:nestedScrollingEnabled="false"
                                android:overScrollMode="never"
                                android:scrollbars="none">

                                <LinearLayout
                                    android:id="@+id/LL_1"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="?attr/selectableItemBackground"
                                    android:clickable="true"
                                    android:focusable="true"
                                    android:orientation="horizontal"
                                    android:padding="18dp"
                                    android:paddingStart="25dp"
                                    android:paddingTop="10dp"
                                    android:paddingEnd="25dp"
                                    android:paddingBottom="10dp">

                                    <RelativeLayout
                                        android:id="@+id/iconArea"
                                        android:layout_width="33dp"
                                        android:layout_height="33dp"
                                        android:background="@drawable/options_icon_black_round_background">

                                        <ImageView
                                            android:id="@+id/icon"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_centerInParent="true"
                                            android:layout_marginStart="5dp"
                                            android:layout_marginTop="5dp"
                                            android:layout_marginEnd="5dp"
                                            android:layout_marginBottom="5dp"
                                            android:contentDescription="@null"
                                            android:paddingStart="0.5dp"
                                            android:src="@drawable/ic_lock" />

                                    </RelativeLayout>

                                    <EditText
                                        android:id="@+id/app_password_et"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:layout_marginStart="20dp"
                                        android:layout_marginEnd="20dp"
                                        android:layout_weight="1"
                                        android:background="@android:color/transparent"
                                        android:fontFamily="@font/quicksand_medium"
                                        android:gravity="center"
                                        android:hint="@string/app_password"
                                        android:imeOptions="actionDone"
                                        android:inputType="textPassword"
                                        android:maxLength="15"
                                        android:paddingBottom="3dp"
                                        android:singleLine="true"
                                        android:textColor="@android:color/black"
                                        android:textSize="17sp" />


                                </LinearLayout>

                            </RelativeLayout>

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <Button
                android:id="@+id/forgotpasswordbtn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nestedScrollView"
                android:layout_alignParentEnd="true"
                android:gravity="top"
                android:text="@string/forgot_password"
                android:textColor="@color/accentRed"
                tools:ignore="MissingConstraints" />

        </RelativeLayout>

        <View
            android:id="@+id/statusShadow"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_below="@id/statusBackground1"
            android:background="@drawable/shadow" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/statusBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/accentRed"
            android:src="@drawable/ic_arrow_down"
            android:visibility="invisible"
            app:borderWidth="0dp"
            app:elevation="0dp"
            app:fabSize="mini"
            app:tint="@android:color/white" />

    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/actionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="#626262"
        android:enabled="false"
        android:fontFamily="@font/quicksand_bold"
        android:paddingStart="22dp"
        android:paddingTop="7dp"
        android:paddingEnd="22dp"
        android:paddingBottom="9dp"
        android:text="@string/open"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:theme="@style/MyMaterialTheme"
        app:elevation="3dp"
        app:layout_anchor="@id/bottomContent"
        app:layout_anchorGravity="bottom|center_horizontal" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>